--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]--> 
 <link rel="stylesheet" href="w3.css">
+<link rel="icon" href="http://www.freeiconspng.com/uploads/website-icon-11.png">
 </head>
 <body>
 <!-- Navigation Bar -->
