--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <li><a href="#">Link 3</a></li>
 </ul>
 
-<form action="mailto:someone@example.com" method="post" enctype="text/plain">
+<form action="mailto:robbiethewadley@gmail.com" method="post" enctype="text/plain">
 Name:<br>
 <input type="text" name="name"><br>
 E-mail:<br>
