--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <!-- Navigation Bar -->
 <ul class="w3-navbar w3-indigo">
 	<li class="w3-navitem"><b>Example</b></li>
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Link 1</a></li>
+  <li><a href="" style="a:active">Home</a></li>
+  <li><a href="contact.html">Contact</a></li>
   <li><a href="#">Link 2</a></li>
   <li><a href="#">Link 3</a></li>
 </ul>
