--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 <ul class="w3-navbar w3-indigo">
 	<li class="w3-navitem"><b>Example</b></li>
   <li><a href="" style="a:active">Home</a></li>
-  <li><a href="contact.html">Contact</a></li>
+  <li><a class="w3-disabled" href="#">Contact</a></li>
   <li><a href="#">Link 2</a></li>
   <li><a href="#">Link 3</a></li>
 </ul>
 
 <!-- Image and Modal Button -->
 <div class="w3-display-container">
-	<img src="http://placehold.it/2000x500" width="100%">
+	<img src="http://www.w3schools.com/css/trolltunga.jpg" width="100%">
 	<button onclick="document.getElementById('new').style.display='block'"
-class="w3-btn w3-display-bottomleft" style="margin:10px">Open Modal</button>
+class="w3-btn w3-display-bottomleft" style="margin:10px">What's New?</button>
 </div>
 
 <!-- Modal -->
@@ -38,13 +38,19 @@ class="w3-btn w3-display-bottomleft" style="margin:10px">Open Modal</button>
     <div class="w3-container w3-card-8">
       <span onclick="document.getElementById('new').style.display='none'" 
       class="w3-closebtn"> &times; </span>
-      <h1>A Modal, YOYLE</h1>
-      <p>Some text in the Modal...</p>
+      <h1>What's New</h1>
+      <p>A Fresh Website, Hoorah!</p>
+      <li>What's New Page</li>
+      <li>Feed (In Development)</li>
+      <li>Contact Form (In Development)</li>
+      <p>More to come!</p>
     </div>
   </div>
 </div>
 
-<!-- Cards -->
+<iframe width="100%" height="500" src="feed1.html" frameBorder="0"></iframe>
+
+<!-- Cards 
 <div class="w3-container w3-card w3-third w3-blue">
 <h1>Topic 1</h1>
 <p>Some info</p>
@@ -64,6 +70,6 @@ class="w3-btn w3-display-bottomleft" style="margin:10px">Open Modal</button>
 <div class="w3-container w3-card w3-half w3-blue">
 <h1>Topic 5</h1>
 <p>Some info</p>
-</div>
+</div>-->
 </body>
 </html>
